# tea-cfm

./: CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py  texte.py
.streamlit/: config.toml
app/: __init__.py  branding.py  config.py  report.py  services.py  theme.py
app/components/: charts.py  project_form.py
app/views/: assumptions.py  auktion.py  project_detail.py
data/: global_assumptions.yaml
data/projects/: gruenau-konventionell.yaml  halsdorf.yaml  sonnenfeld-agri.yaml  template-agri.yaml  template-konventionell.yaml
engine/: __init__.py  cashflow.py  energy.py  financing.py  io_ergebnis_excel.py  io_excel.py  io_yaml.py  kpis.py  models.py  opex.py  pipeline.py  revenue.py  sensitivity.py  tax.py  timeline.py
locales/: README.md
locales/de/: bericht.yaml  excel.yaml  oberflaeche.yaml
locales/en/: bericht.yaml  excel.yaml  oberflaeche.yaml
locales/es/: bericht.yaml  excel.yaml  oberflaeche.yaml
locales/fr/: bericht.yaml  excel.yaml  oberflaeche.yaml
tests/: test_app_helpers.py  test_financing_tax.py  test_markt_system.py  test_texte.py  test_timeline_energy_opex.py  test_ui_smoke.py
