[project]
name = "tea-pv-platform"
version = "2.2.0"
description = "TEA PV-Projektbewertung – Wirtschaftlichkeitsrechnung für PV-Projekte nach dem österreichischen EAG-Marktprämienmodell"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pandas>=3.0.5",
    "numpy>=2.4.6",
    # pyarrow 25.0.0 hat einen reproduzierbaren Segmentation-Fault-Bug beim
    # Rendern von st.dataframe() (getestet gegen numpy 2.5.1 / pandas 3.0.3).
    # Die Versionen 21, 23 und 24 sind stabil, deshalb < 25 pinnen.
    "pyarrow>=25.0.0,<26",
    "numpy-financial>=1.0",
    "scipy>=1.17.1",
    "pyyaml>=6.0.3",
    "openpyxl>=3.1.5",
    "streamlit>=1.60.0",
    "plotly>=6.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Zeilenlaenge: deutsche Fachbegriffe + Docstrings sind lang
    "SIM108", # ternary statt if/else: Lesbarkeit geht hier vor
    "UP042",  # str-Enum statt StrEnum: bewusst, wegen Python-3.11-Support
]

[tool.ruff.lint.per-file-ignores]
# Views/Komponenten: bewusste spaete Streamlit-Importe im Entry-Point.
"streamlit_app.py" = ["E402"]
"tests/*" = ["E402"]
